feat: add Flyway V1 migration for users table and User JPA entity
- Create V1__create_users_table.sql with UUID PK, email (UNIQUE), password_hash, timestamps
- Add User JPA entity with @PrePersist/@PreUpdate for automatic timestamps
- Add UserRepository with findByEmail() and existsByEmail()
- Add 7 repository tests covering CRUD, uniqueness, and timestamp behavior
- Remove deprecated H2Dialect from test config
- Update tasks.json (TASK-003 → done) and progress.md